# pre-commit-completion

./: .clang-format  .clang-tidy  .cmake-format.yml  .pre-commit-config.yaml  CMakeLists.txt  README.md  parser.cpp
scripts/: pre-commit
